objects/Process_Information__c.object
<CustomObject>
    <fields>
        <fullName>BX_041__c</fullName>
        <label>BX-041</label>
        <referenceTo>BX_041__c</referenceTo>
        <relationshipLabel>Process Information</relationshipLabel>
        <relationshipName>Process_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Comment__c</fullName>
        <label>Customer Comment</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Request__c</fullName>
        <label>Customer Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FE_Requested_Information__c</fullName>
        <label>FE (Requested Information)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIYE__c</fullName>
        <label>PIYE (Assigned Information)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Metadata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Metadata</label>
        <referenceTo>Question_Metadata__c</referenceTo>
        <relationshipLabel>Process Information</relationshipLabel>
        <relationshipName>Process_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_to_Display__c</fullName>
        <label>Question to Display</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement_Gaps__c</fullName>
        <label>Requirement Gaps</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>mandatory</label>
        <type>Checkbox</type>
    </fields>
    <label>Process Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PIN-{0000}</displayFormat>
        <label>Process Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>